--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,7 +2,7 @@ name: Deploy MultiDocker
 on:
   push:
     branches:
-      - main # check your repo, your default branch might be master!
+      - main
 
 jobs:
   build:
@@ -10,18 +10,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t rallycoding/react-test -f ./client/Dockerfile.dev ./client
-      - run: docker run -e CI=true rallycoding/react-test npm test
+      - run: docker build -t bensjamin/react-test -f ./client/Dockerfile.dev ./client
+      - run: docker run -e CI=true bensjamin/react-test npm test
 
-      - run: docker build -t rallycoding/multi-client ./client
-      - run: docker build -t rallycoding/multi-nginx ./nginx
-      - run: docker build -t rallycoding/multi-server ./server
-      - run: docker build -t rallycoding/multi-worker ./worker
+      - run: docker build -t bensjamin/multi-client ./client
+      - run: docker build -t bensjamin/multi-nginx ./nginx
+      - run: docker build -t bensjamin/multi-server ./server
+      - run: docker build -t bensjamin/multi-worker ./worker
 
-      - run: docker push rallycoding/multi-client
-      - run: docker push rallycoding/multi-nginx
-      - run: docker push rallycoding/multi-server
-      - run: docker push rallycoding/multi-worker
+      - run: docker push bensjamin/multi-client
+      - run: docker push bensjamin/multi-nginx
+      - run: docker push bensjamin/multi-server
+      - run: docker push bensjamin/multi-worker
 
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
